<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014 Google, Inc

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">Acapy Members</string>
    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>


    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>


    <string name="user_key">User Name</string>
    <string name="user_default">0</string>


    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>


    <string name="nav_bot_order">الاوردرات</string>
    <string name="nav_bot_messege">الرسائل</string>


    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">نوع الصيانة</string>
    <string name="weight_mock" translatable="false">0</string>
    <string name="weight_badge" translatable="false">تحصيل مبلغ</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">مرافقين</string>
    <string name="sender_badge" translatable="false">المكان</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">تم</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="times">1000*60*30</string>
    <string name="request_btn_pen_text">تاجيل</string>
    <string name="request_btn_note_text">اضافة ملاحظة</string>
    <string name="request_btn_save_text">الحصول على الخطوات</string>

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>


    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="need_location_permission_message">You need to enable location permissions first</string>
    <string name="progress_fragment">تفاصيل</string>
    <string name="progrss_save">حفظ</string>
    <string name="cost_amount">المبلغ</string>
    <string name="cost_details">جهة الصرف</string>
    <string name="cost_date">التاريخ</string>
    <string name="action_save">save</string>
    <string name="action_add">اضافة جهاز</string>
    <string name="progress_name">المطلوب تنفيذه</string>
    <string name="cost_name">تنقلات</string>
    <string name="request_btn_cost_text">انتقالات</string>
    <string name="cost_fragment">انتقالات</string>
    <string name="content_save_progress">حفظ التغيرات</string>
    <string name="label">ملاحظات</string>
    <string name="content_description_end_icon">ملاحظات</string>
    <string name="noProgress">لايوجد خطوات</string>
<<<<<<< HEAD
=======
    <string name="nav_bot_costs">انتقالات</string>

    <string name="deivceName">Device Name</string>
    <string name="deivceType">Device Type</string>
    <string name="deivceModel">Device Model</string>
    <string name="deivceDetails">Device Details</string>
    <string name="deivceIp">IP</string>
    <string name="deivcePort">Port</string>
    <string name="deivceUsername">UserName</string>
    <string name="deivcePassword">Password</string>
    <string name="deivceEmail">E-Mail</string>
    <string name="deivceEmailPassword">E-Mail Password</string>
    <string name="addorder_user">Place Name</string>
    <string name="choose">choose place</string>
    <string name="nav_transitions_pay">فى انتظار الدفع</string>
    <string name="nav_transitions_paied">تم الدفع</string>
    <string name="action_add_ip">تعديل السيرفر</string>
    <string name="nav_transitions_Banks">المسحوبات</string>
    <string name="addBalance">اضافة مسحوبات</string>
    <string name="nav_bot_store">المخزن</string>
    <string name="nav_store_out">صرف</string>
    <string name="nav_store_in">مرتجع</string>
    <string name="addExite">صرف من المخزن</string>
    <string name="addRetunr">مرتجع</string>
    <string name="nav_transitions_summary">حسابي</string>
    <string name="store_product">الصنف</string>
    <string name="store_amount">العدد</string>
    <string name="store_out">صرف من المخزن</string>
    <string name="store_in">مرتجع للمخزن</string>
    <string name="store_client">الخاص ب</string>
    <string name="store_client_hint">عملية او صيانة + اسم العميل</string>
    <string name="balance_details">تحت الحساب او باقي</string>
    <string name="balance_details_text">التفاصيل</string>
    <string name="transition_summary_total">اجمالي انتقالاتك</string>
    <string name="transition_summary_balance">اجمالي المسحوبات</string>
    <string name="transition_summary_rest">الباقي</string>
    <string name="store_date">التاريخ</string>
    <string name="store_date_hint">تاريخ السحب من المخزن</string>
    <string name="store_id">م</string>
    <string name="store_return_hint">اختار من اوامر الصرف السابقة</string>
>>>>>>> e657a51ca46385b1f80c980290f93f6b456eb68a
</resources>
