<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:clickable="false"
    android:contextClickable="false">

    <item
        android:id="@+id/nav_bot_order"
        android:icon="@drawable/ic_orders"
        android:title="@string/nav_bot_order"></item>
    <item
        android:id="@+id/nav_bot_messege"
        android:icon="@drawable/ic_messege"
        android:title="@string/nav_bot_messege"></item>
    <item
        android:id="@+id/nav_bot_costs"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:title="@string/nav_bot_costs"></item>
    <item
        android:id="@+id/nav_bot_store"
        android:icon="@drawable/ic_baseline_store_24"
        android:title="@string/nav_bot_store"></item>
</menu>