<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/rounded_check_box_body">

        <TextView
            android:id="@+id/cost_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rounded_text_area"
            android:gravity="center_vertical"
            android:hint="@string/cost_amount" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/rounded_check_box_body">

        <TextView
            android:id="@+id/cost_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rounded_text_area"
            android:gravity="center_vertical"
            android:hint="@string/cost_details" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/rounded_check_box_body">

        <TextView
            android:id="@+id/cost_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rounded_text_area"
            android:gravity="center_vertical"
            android:hint="@string/cost_date" />
    </LinearLayout>
</LinearLayout>