<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">

        <EditText
            android:id="@+id/balance_amount"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:inputType="numberDecimal"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:hint="@string/cost_amount" />

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cost_amount" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/balance_date"
                style="@style/EditorFieldStyle"
                android:layout_marginLeft="50dp"
                android:hint="@string/cost_date"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/balance_add_date"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/ic_baseline_date_range_24" />


        </RelativeLayout>

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cost_date" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">

        <EditText
            android:id="@+id/balance_details"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:inputType="text"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:hint="@string/balance_details" />

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/balance_details_text" />

    </LinearLayout>
</LinearLayout>