<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingTop="25dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/transitions_summary_total"
            style="@style/balanceStyleValues"
            android:layout_width="0dp"
            android:textAlignment="viewEnd"
            android:gravity="end"
            android:paddingHorizontal="25dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="0"/>

        <TextView
            style="@style/balanceStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/transition_summary_total" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/transitions_summary_balance"
            style="@style/balanceStyleValues"
            android:textAlignment="viewEnd"
            android:gravity="end"
            android:paddingHorizontal="25dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="0" />

        <TextView
            style="@style/balanceStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/transition_summary_balance" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/transitions_summary_rest"
            style="@style/balanceStyleValues"
            android:layout_width="0dp"
            android:textAlignment="viewEnd"
            android:gravity="end"
            android:paddingHorizontal="25dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="0" />

        <TextView
            style="@style/balanceStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/transition_summary_rest" />

    </LinearLayout>
</LinearLayout>